CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
CMAKE_POLICY(SET CMP0003 NEW)

PROJECT(smartdb)

SET(CMAKE_CXX_FLAGS "-O2 -g -Wall -std=c++11 ${CMAKE_C_FLAGS}")

INCLUDE_DIRECTORIES(
    include
    lib
    storage
)

EXECUTE_PROCESS(
    COMMAND find ${CMAKE_CURRENT_SOURCE_DIR}/lib -name "*.cpp"
    COMMAND grep -v CMakeFiles
    COMMAND tr "\n" ";"
    OUTPUT_VARIABLE LIB_SOURCE_FILES
)

ADD_LIBRARY(smartdb SHARED ${LIB_SOURCE_FILES})
